# mcrs

./: .gitignore  Cargo.toml  LICENSE-VALENCE-MIT  README.md
crates/mcrs_core/: Cargo.toml
crates/mcrs_core/src/: lib.rs  resource_location.rs  state.rs
crates/mcrs_core/src/block_state/: mod.rs
crates/mcrs_core/src/registry/: access.rs  mod.rs  resource_key.rs  snapshot.rs  static_registry.rs
crates/mcrs_core/src/tag/: bitset.rs  dyn_registry.rs  dynamic_tags.rs  file.rs  key.rs  mod.rs  registry.rs  static_tags.rs  tag_ref.rs
crates/mcrs_core/src/voxel_shape/: block.rs  discrete.rs  empty.rs  mod.rs
crates/mcrs_engine/: Cargo.toml  README.md
crates/mcrs_engine/src/: lib.rs  math.rs
crates/mcrs_engine/src/aoi/: components.rs  mod.rs  tracker.rs
crates/mcrs_engine/src/entity/: despawn.rs  mod.rs  physics.rs
crates/mcrs_engine/src/geometry/: block_pos.rs  chunk_pos.rs  column_pos.rs  mod.rs  region_pos.rs
crates/mcrs_engine/src/math/: bit_size.rs  mod.rs  outward.rs
crates/mcrs_engine/src/world/: README.md  block.rs  chunk.rs  column.rs  dimension.rs  lighting.rs  mod.rs  region.rs  sub_app.rs
crates/mcrs_engine/tests/: aoi_per_dim_isolation.rs  cross_dim_player_transfer.rs  per_dim_simulation_plugin_migration.rs  subapp_lifecycle.rs
crates/mcrs_light_codec/: Cargo.toml
crates/mcrs_light_codec/src/: codec.rs  components.rs  lib.rs  sets.rs
crates/mcrs_lighting/: Cargo.toml
crates/mcrs_lighting/src/: bfs.rs  bundle.rs  codec.rs  components.rs  converge.rs  distribute.rs  emit_dirty.rs  enqueue.rs  heightmap_update.rs  invariants.rs  lib.rs  lifecycle.rs  nibble.rs  plugin.rs  propagate.rs  sets.rs  storage.rs  stub.rs  table.rs  telemetry.rs
crates/mcrs_lighting/src/test_bench/: builder.rs  mod.rs
crates/mcrs_lighting/tests/: bus_field_visibility.rs  codec.rs  golden_snapshots.rs  heightmap_integration.rs  lifecycle_integration.rs
crates/mcrs_minecraft/: Cargo.toml  minimal_registries.json
crates/mcrs_minecraft/src/: biome.rs  client_info.rs  configuration.rs  dialog.rs  dimension_type.rs  direction.rs  disconnect.rs  keep_alive.rs  lib.rs  login.rs  network.rs  parallel_world.rs  runner.rs  value.rs  vanilla_plugin.rs  version.rs  weight.rs  world_preset_loader.rs
crates/mcrs_minecraft/tests/: aoi_block_update_per_dim.rs  aoi_drain_disconnect_filters_inflight.rs  aoi_mass_disconnect_budget.rs  aoi_mirror_invariant.rs  aoi_mirror_invariant_under_reconcile_race.rs  aoi_on_player_disconnect_cleanup.rs  aoi_one_tick_tracked_by.rs  aoi_player_despawn_evicts_observers.rs  aoi_player_tracker.rs  aoi_stationary_zero_work.rs  aoi_synchronous_own_pov.rs  aoi_tnt_cascade_restored.rs  bridge_dispatch.rs  bridge_inbound.rs  bridge_outbound.rs  bus_e2e.rs  dim_attribute_injection.rs  host_subapp_handoff.rs  instrument_naming_convention.rs  login_handshake_e2e.rs  play_state_delivery.rs  player_index_lifecycle.rs  run_server_loop_exit.rs  tr07_scale.rs  worldgen_y_range_clamp.rs
crates/mcrs_minecraft_block/: Cargo.toml
crates/mcrs_minecraft_block/src/: block_update.rs  lib.rs  palette.rs
crates/mcrs_minecraft_lighting/: Cargo.toml
crates/mcrs_minecraft_lighting/benches/: parallel_scaling.rs  pit_dig_16x16x64.rs  roof_removal_16x16.rs  single_torch.rs  spawn_warmup_vd12_one_column_at_edge.rs  tnt_chain.rs
crates/mcrs_minecraft_lighting/examples/: memory_profile.rs  profile_spawn_warmup.rs
crates/mcrs_minecraft_lighting/src/: bfs.rs  bitset.rs  bundle.rs  common.rs  converge.rs  distribute.rs  emit_dirty.rs  enqueue.rs  geom.rs  heightmap.rs  heightmap_update.rs  invariants.rs  lib.rs  lifecycle.rs  plugin.rs  propagate.rs  stub.rs  telemetry.rs
crates/mcrs_minecraft_lighting/tests/: bfs_property.proptest-regressions  bfs_property.rs  bus_field_visibility.rs  cave_lit_on_deferred_chunk_load.rs  cave_lit_on_deferred_section_load.rs  codec.rs  golden_snapshots.rs  heightmap_integration.rs  heightmap_scanner_unification.rs  incremental_heightmap_scan.rs  lifecycle_integration.rs  light_update_ordering.rs  multi_dim_isolation.rs  overworld_cave_sky_regression.rs  playing_tick_warmup.rs  sky_exact_level_regression.rs  sky_overhang_regression.rs  subapp_lighting.rs  torch_emits_block_light_dirty.rs
crates/mcrs_minecraft_worldgen/: Cargo.toml
crates/mcrs_minecraft_worldgen/examples/: bench_worldgen.rs  density_graph.rs
crates/mcrs_minecraft_worldgen/src/: bevy.rs  climate.rs  lib.rs  proto.rs
crates/mcrs_network/: Cargo.toml  README.md
crates/mcrs_network/src/: byte_channel.rs  connect.rs  event.rs  intent.rs  lib.rs  metrics.rs  packet_io.rs  status.rs
crates/mcrs_network/tests/: accept_rate_unit.rs  transport_unit.rs
crates/mcrs_protocol/: Cargo.toml  README.md
crates/mcrs_protocol/src/: biome_pos.rs  bit_set.rs  block.rs  block_pos.rs  bounded.rs  byte_angle.rs  cell_pos.rs  chunk.rs  chunk_pos.rs  chunk_section_pos.rs  dialog.rs  direction.rs  encode.rs  game_event.rs  game_mode.rs  global_pos.rs  handshake.rs  item.rs  lib.rs  packed_chunk_pos.rs  pos.rs  profile.rs  registry.rs  resource_pack.rs  setting.rs  sound.rs  teleport_flags.rs  var_int.rs  var_long.rs  velocity.rs
crates/mcrs_protocol/tests/: column_pos_wire.rs  packet_ids_26_1_2.rs
crates/mcrs_protocol_macros/: Cargo.toml  README.md
crates/mcrs_protocol_macros/src/: decode.rs  encode.rs  lib.rs  packet.rs
crates/mcrs_telemetry/: Cargo.toml  README.md
crates/mcrs_telemetry/src/: lib.rs
crates/mcrs_telemetry/tests/: cargo_features.rs  instrument_naming_convention.rs  per_system_spans_emit.rs  system_set_coverage_doc.rs
crates/mcrs_text/: Cargo.toml  README.md
crates/mcrs_text/src/: into_text.rs  lib.rs  tests.rs
crates/mcrs_vanilla/: Cargo.toml  build.rs
crates/mcrs_vanilla/examples/: nbt_fortune_dump.rs
crates/mcrs_vanilla/src/: banner_pattern.rs  biome.rs  chat_type.rs  damage_type.rs  dialog.rs  explosion.rs  instrument.rs  jukebox_song.rs  lib.rs  painting_variant.rs  player_action.rs  test_types.rs  timeline.rs  trim.rs  variant.rs  world_clock.rs
crates/mcrs_vanilla/tests/: snapshot_integration.rs  tag_system.rs
(+6938 files in other folders)
