#cargo-features = ["codegen-backend"]

[package]
name = "mcrs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcrs"
path = "src/main.rs"

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy_ecs = "0.17.3"
bevy_ecs_macros = "0.17.3"
bevy_app = "0.17.3"
bevy_math = "0.17.3"
bevy_reflect = "0.17.3"
bevy_time = "0.17.3"
bevy_tasks = "0.17.3"
bevy_editor_pls = "0.10.0"
bevy-inspector-egui = "0.35.0"
bevy_transform = "0.17.3"
bevy_utils = "0.17.3"
bevy_asset = "0.17.3"
bevy = { version =  "0.17.3", features = ["trace_tracy"] }

rocksdb = { version = "0.24.0" }
heck = "0.5.0"
proc-macro2 = "1.0.103"
syn = "2.0.110"
quote = "1.0.42"
bytes = "1"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145"}
aes = "0.9.0-rc.2"
base64 = "0.22.1"
bitfield-struct = "0.12.1"
byteorder = "1.5.0"
cfb8 = "0.9.0-rc.1"
derive_more = "2.0.1"
flate2 = "1.1.5"
thiserror = "2.0.17"
tracing = "0.1.41"
url = "2.5.7"
uuid = "1.18.1"
rand = "0.10.0-rc.5"
indexmap = "2.12.0"
rustc-hash = "2.1.1"
arrayvec = "0.7.6"
num-integer = "0.1.46"
tokio = {  version = "1.48.0", features = ["full"] }
valence_generated = "0.2.0-alpha.1+mc.1.20.1"
valence_ident = "0.2.0-alpha.1+mc.1.20.1"
valence_math = "0.2.0-alpha.1+mc.1.20.1"
valence_nbt = "0.8.0"
valence_text = "0.2.0-alpha.1+mc.1.20.1"
valence_build_utils = "0.2.0-alpha.1+mc.1.20.1"

mcrs_protocol_macros = { path = "crates/mcrs_protocol_macros" }
mcrs_generated = { path = "crates/mcrs_generated" }
mcrs_protocol = { path = "crates/mcrs_protocol" }
mcrs_nbt = { path = "crates/mcrs_nbt" }
mcrs_network = { path = "crates/mcrs_network" }
mcrs_engine = { path = "crates/mcrs_engine" }
mcrs_minecraft = { path = "crates/mcrs_minecraft" }
mcrs_registry = { path = "crates/mcrs_registry" }

[dependencies]
bevy.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy-inspector-egui.workspace = true
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
tokio = { version = "1", features = ["full"] }
mcrs_protocol.workspace = true
mcrs_network.workspace = true
mcrs_engine.workspace = true
mcrs_minecraft.workspace = true
anyhow.workspace = true
bytes.workspace = true
tracy-client = "0.18.3"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."bevy_ecs"]
opt-level = 3

[profile.dev.package."bevy_app"]
opt-level = 3

[profile.dev.package."bevy_reflect"]
opt-level = 3

[profile.dev.package."bevy_time"]
opt-level = 3

[profile.dev.package."bevy_math"]
opt-level = 3