#cargo-features = ["codegen-backend"]

[package]
name = "mcrs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcrs"
path = "src/main.rs"

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy_ecs = "0.18.0-rc.1"
bevy_ecs_macros = "0.18.0-rc.1"
bevy_app = "0.18.0-rc.1"
bevy_math = "0.18.0-rc.1"
bevy_time = "0.18.0-rc.1"
bevy_tasks = "0.18.0-rc.1"
bevy_utils = { version = "0.18.0-rc.1", features = ["debug"] }
bevy_asset = "0.18.0-rc.1"
bevy_derive = "0.18.0-rc.1"
bevy_log = "0.18.0-rc.1"

rocksdb = { version = "0.24.0" }
heck = "0.5.0"
cipher = "0.5.0-rc.2"
async-compression = { version = "0.4.36", features = ["tokio", "zlib"] }
proc-macro2 = "1.0.103"
syn = "2.0.110"
quote = "1.0.42"
bytes = "1"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145"}
aes = "0.9.0-rc.2"
base64 = "0.22.1"
bitfield-struct = "0.12.1"
byteorder = "1.5.0"
cfb8 = "0.9.0-rc.1"
derive_more = "2.0.1"
flate2 = "1.1.5"
thiserror = "2.0.17"
tracing = "0.1.41"
url = "2.5.7"
uuid = "1.18.1"
rand = "0.10.0-rc.5"
indexmap = "2.12.0"
rustc-hash = "2.1.1"
arrayvec = "0.7.6"
num-integer = "0.1.46"
tokio = {  version = "1.48.0", features = ["full"] }
valence_ident = "0.2.0-alpha.1+mc.1.20.1"
valence_text = "0.2.0-alpha.1+mc.1.20.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

mcrs_protocol_macros = { path = "crates/mcrs_protocol_macros" }
mcrs_protocol = { path = "crates/mcrs_protocol" }
mcrs_nbt = { path = "crates/mcrs_nbt" }
mcrs_network = { path = "crates/mcrs_network" }
mcrs_engine = { path = "crates/mcrs_engine" }
mcrs_minecraft = { path = "crates/mcrs_minecraft" }
mcrs_registry = { path = "crates/mcrs_registry" }

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
tokio = { version = "1", features = ["full"] }
mcrs_minecraft.workspace = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."bevy_ecs"]
opt-level = 3

[profile.dev.package."bevy_app"]
opt-level = 3

[profile.dev.package."bevy_reflect"]
opt-level = 3

[profile.dev.package."bevy_time"]
opt-level = 3

[profile.dev.package."bevy_math"]
opt-level = 3