[package]
name = "mcrs_core"
description = "Core types: ResourceLocation, StaticRegistry, TagFile, AppState"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_asset.workspace = true
bevy_reflect.workspace = true
bevy_state.workspace = true
serde.workspace = true
serde_json.workspace = true
mcrs_core_macros.workspace = true
thiserror.workspace = true
tracing.workspace = true
