[package]
name = "mcrs_engine"
description = "mcrs_engine"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs.workspace = true
bevy_ecs_macros.workspace = true
bevy_derive.workspace = true
bevy_app.workspace = true
bevy_math.workspace = true
rustc-hash.workspace = true
tracing = "0.1.43"

[features]

[profile.dev.package."bevy"]
opt-level = 3







