[package]
name = "mcrs_engine"
description = "mcrs_engine"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs.workspace = true
bevy_ecs_macros.workspace = true
bevy_derive.workspace = true
bevy_app.workspace = true
bevy_math.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
tracing = "0.1.43"
log = "0.4.29"

[features]

[profile.dev.package."bevy"]
opt-level = 3







