[package]
name = "mcrs_engine"
description = "mcrs_engine"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs.workspace = true
bevy_ecs_macros.workspace = true
bevy_derive.workspace = true
bevy_app.workspace = true
bevy_math.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
smallvec.workspace = true
tracing = "0.1.43"
log = "0.4.29"

[dev-dependencies]
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_state.workspace = true
bevy_time.workspace = true
bytes.workspace = true
mcrs_core.workspace = true
mcrs_minecraft.workspace = true
mcrs_minecraft_block.workspace = true
mcrs_minecraft_lighting.workspace = true
mcrs_protocol.workspace = true
mcrs_vanilla.workspace = true
smallvec.workspace = true

[features]

[profile.dev.package."bevy"]
opt-level = 3
