[package]
name = "mcrs_light_codec"
description = "mcrs_light_codec"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
mcrs_engine.workspace = true
mcrs_protocol.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
