[package]
name = "mcrs_lighting"
description = "mcrs_lighting"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs.workspace = true
mcrs_core.workspace = true
mcrs_protocol.workspace = true
mcrs_engine = { workspace = true, optional = true }
mcrs_minecraft = { workspace = true, optional = true }

[features]
test-bench = ["dep:mcrs_engine", "dep:mcrs_minecraft"]

[profile.dev.package."bevy"]
opt-level = 3
