[package]
name = "mcrs_lighting"
description = "mcrs_lighting"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_state.workspace = true
mcrs_core.workspace = true
mcrs_protocol.workspace = true
mcrs_engine.workspace = true
mcrs_minecraft.workspace = true
mcrs_vanilla.workspace = true
smallvec.workspace = true
tracing.workspace = true

[features]
test-bench = []
