[package]
name = "mcrs_minecraft"
description = "mcrs_minecraft"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs_macros.workspace = true
mcrs_engine.workspace = true
mcrs_network.workspace = true
mcrs_protocol.workspace = true
mcrs_registry.workspace = true
mcrs_minecraft_worldgen.workspace = true
mcrs_nbt.workspace = true
bevy_math.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_time.workspace = true
bevy_tasks.workspace = true
bevy_utils.workspace = true
bevy_asset.workspace = true
bevy_reflect.workspace = true
tokio.workspace = true
rand.workspace = true
serde_json.workspace = true
rustc-hash.workspace = true
arrayvec.workspace = true
num-integer.workspace = true
derive_more.workspace = true
rocksdb.workspace = true
indexmap.workspace = true
bytes.workspace = true
cipher.workspace = true
async-compression.workspace = true
thiserror.workspace = true
paste = { version = "1.0.15" }
serde = { version = "1.0.228", features = ["derive"] }
bitflags = "2.10.0"
tracing = { workspace = true }
cfb8.workspace = true
aes.workspace = true

[features]
         











