[package]
name = "mcrs_minecraft_lighting"
description = "mcrs_minecraft_lighting"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_state.workspace = true
mcrs_core.workspace = true
mcrs_protocol.workspace = true
mcrs_engine.workspace = true
mcrs_minecraft_block.workspace = true
mcrs_vanilla.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
tracing.workspace = true

[features]
test-bench = []
lighting-trace = []

[dev-dependencies]
mcrs_minecraft.workspace = true
tracing-subscriber = "0.3"
