[package]
name = "mcrs_protocol"
description = "Protocol library for Minecraft: Java Edition"
readme = "README.md"
version.workspace = true
edition.workspace = true


[features]
encryption = ["dep:aes", "dep:cfb8"]
compression = ["dep:flate2"]

[dependencies]
valence_math.workspace = true
valence_text.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
mcrs_nbt.workspace = true
mcrs_protocol_macros.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
byteorder.workspace = true
uuid.workspace = true
valence_ident.workspace = true
base64.workspace = true
url.workspace = true
serde_json.workspace = true
tracing.workspace = true
bytes.workspace = true
bitfield-struct.workspace = true
derive_more = { workspace = true, features = ["from", "into", "deref", "deref_mut", "as_ref"] }
cfb8 = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
aes = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
