[package]
name = "mcrs_protocol_macros"
description = "Procedural macros for mcrs_protocol"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
heck.workspace = true
