[package]
name = "mcrs_telemetry"
description = "Tracy / diagnostics substrate for mcrs"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_log.workspace = true
bevy_diagnostic = { version = "0.18.0", optional = true }

[features]
default = []
telemetry = ["telemetry-tracy", "telemetry-diagnostics"]
telemetry-tracy = ["bevy_log/tracing-tracy"]
telemetry-diagnostics = ["dep:bevy_diagnostic"]
