[package]
name = "mcrs_telemetry"
description = "Tracy / diagnostics substrate for mcrs"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_log.workspace = true
bevy_diagnostic = { version = "0.19.0-rc.3", optional = true }

[dev-dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"

[features]
default = []
telemetry = ["telemetry-tracy", "telemetry-diagnostics"]
telemetry-tracy = ["bevy_log/tracing-tracy"]
telemetry-diagnostics = ["dep:bevy_diagnostic"]
