[package]
name = "mcrs_vanilla"
description = "Vanilla Minecraft block/item type vocabulary and static registries"
version.workspace = true
edition.workspace = true

[dependencies]
mcrs_core.workspace = true
mcrs_protocol.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_asset.workspace = true
bevy_state.workspace = true
paste = "1"
bitflags = "2"
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bevy_reflect.workspace = true
bevy_ecs_macros.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
mcrs_engine.workspace = true
bevy_math.workspace = true
rand.workspace = true
derive_more.workspace = true
